# rattler-issue-reproducer

./: Cargo.toml
src/: main.rs
